# kinetica

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
configs/: pd111.conf  pd111_ohco_subset.conf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  oc20_bimolecular_records_parse.rs  oc20_energy_records_parse.rs  reactions_lut_parse.rs
scripts/: extract_catalysis_hub.py  extract_energies.py  kinetica_config.py  oc20e_format.py  plot_coverage.py  plot_lattice.py  test_kinetica_config.py
src/: config.rs  engine.rs  gillespie.rs  layout.rs  lib.rs  main.rs  oc20e_format.rs  occupancy.rs  topology.rs
tests/: real_data_regression.rs  subset_config_regression.rs
