[package]
name = "kinetica"
version = "0.1.0"
edition = "2021"
description = "Asynchronous, out-of-core lattice kinetic Monte Carlo engine for single-workstation OC20-scale surface reaction simulation."
authors = ["AndrejRumenovski"]
license = "MIT OR Apache-2.0"

# ------------------------------------------------------------------------------
# BUILD NOTES
# ------------------------------------------------------------------------------
# This crate is written to run entirely inside L1/L2 cache during the hot
# Gillespie loop, via the cache-line-aligned AoSOA `ReactionLutBlock` layout
# in layout.rs. A plain `cargo build --release` is sufficient -- there is no
# explicit SIMD (no std::arch/std::simd/intrinsics) anywhere in this crate.
#
# An earlier revision of this comment recommended building with
# `RUSTFLAGS="-C target-cpu=native -C target-feature=+avx2"`, on the
# assumption that this would unlock LLVM auto-vectorization of the AoSOA
# layout. That assumption was never benchmarked against a plain release
# build. Once it was (see README's "Benchmarks" section), the flag measured
# ~11% *slower* on the Static/SSA-CR engine and a wash on the occupancy-gated
# engine, on real hardware -- so the recommendation was removed rather than
# kept as unverified advice that also cost binary portability
# (target-cpu=native bakes in host-specific instructions).
[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
memmap2 = "=0.9.11"
rio = "=0.9.4"
rayon = "=1.12.0"
crossbeam-channel = "=0.5.16"

[dev-dependencies]
proptest = "=1.11.0"
