[package]
name = "kinetica-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kinetica]
path = ".."

[[bin]]
name = "reactions_lut_parse"
path = "fuzz_targets/reactions_lut_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oc20_energy_records_parse"
path = "fuzz_targets/oc20_energy_records_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oc20_bimolecular_records_parse"
path = "fuzz_targets/oc20_bimolecular_records_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false
